--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,19 @@
-<h1>My Tasks</h1>
+<div class="container">
+<h1 class="m-2">My Tasks</h1>
 
 <ul>
   <% @tasks.each do |task| %>
-    <li><input type="checkbox" name="<%= task.id %>" value="true"><%= link_to task.title,  task_path(task)%></li>
+    <% if task.completed  %>
+      <% box = true %>
+    <% else %>
+      <% box = false %>
+    <% end %>
+    <li><%= link_to task.title,  task_path(task)%><%= link_to "Delete Task",
+            task_path(task),
+            method: :delete,
+            data: { confirm: "Are you sure?" } , :class => 'btn btn-danger m-2' %></li>
   <% end %>
 </ul>
 
-<%= link_to "Create New Task",  new_task_path %>
+<%= link_to "Create New Task",  new_task_path, :class => 'btn btn-primary m-1' %>
+</div>
