--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,10 +1,16 @@
 
 <%= form_for(@task) do |t| %>
+<div>
   <%= t.label :title %>
   <%= t.text_field :title %>
+</div>
+<div>
   <%= t.label :details %>
   <%= t.text_field :details %>
+</div>
+<div>
   <%= t.submit %>
+</div>
 <% end %>
 
 <%= link_to "Back To List",  tasks_path %>
