--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,11 +1,23 @@
-
-<h1>Updating Task - <%= @task.title  %></h1>
-<%= form_for(@task) do |t| %>
-  <%= t.label :title %>
-  <%= t.text_field :title %>
-  <%= t.label :details %>
-  <%= t.text_field :details %>
-  <%= label_tag(:completed, "Completed") %>
-  <%= t.check_box(:completed) %>
-  <%= t.submit %>
-<% end %>
+<div class="container">
+  <h1 class="mx-2 my-4">Updating Task - <%= @task.title  %></h1>
+  <%= form_for(@task) do |t| %>
+    <div class="m-2">
+      <%= t.label :title %>
+      <%= t.text_field :title %>
+    </div>
+    <div class="m-2">
+      <%= t.label :details %>
+      <%= t.text_field :details %>
+    </div>
+    <div class="m-2">
+      <%= label_tag(:completed, "Completed") %>
+      <%= t.check_box(:completed) %>
+    </div>
+    <div class="m-2">
+      <%= t.submit %>
+    </div>
+  <% end %>
+  <div class="m-2">
+    <%= link_to "Back To List",  tasks_path, :class => 'btn btn-secondary'%>
+  </div>
+</div>
